vlib/v/checker/tests/const_match_range_invalid_err.out
vlib/v/checker/tests/const_match_range_invalid_err.vv:6:2: error: the start value `10` should be lower than the end value `1`
    4 | 
    5 | match 5 {
    6 |     end...start {
      |     ~~~~~~~~~~~
    7 |         println(start)
    8 |     }
vlib/v/checker/tests/const_match_range_invalid_err.vv:13:2: error: the start value `10` should be lower than the end value `1`
   11 | 
   12 | a := match 5 {
   13 |     end...start {
      |     ~~~~~~~~~~~
   14 |         4
   15 |     }
